More frontend testing, fixed N2 options overflow bug

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -12,7 +12,6 @@
 
 #sidebar {
     background-color: #525153;
-    overflow: scroll;
 }
 
 .sidenav {
